fix z-index

--- a/Sneaker_DATN/wwwroot/css/home-main-2.css
+++ b/Sneaker_DATN/wwwroot/css/home-main-2.css
@@ -125,3 +125,7 @@
         transform: rotate(360deg);
     }
 }
+
+.img-cart-inx {
+    z-index: 89 !important;
+}
