--- a/Sneaker_DATN/wwwroot/css/home-main.css
+++ b/Sneaker_DATN/wwwroot/css/home-main.css
@@ -345,7 +345,7 @@ h6 {
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 999999;
+    z-index: 99 !important;
     transition: background 0.4s, all 0.3s linear;
     -webkit-transition: all 0.3s ease 0s;
     -moz-transition: all 0.3s ease 0s;
